# commonplace

./: .gitignore  README.md  pyproject.toml
book/: 2026-04-30-ai-augmented-content-strategy-lessons-from-tayla-burrell.md  2026-05-03-principles-of-making-good-new-things.md  Adam Aleksic (Etymology Nerd): Thinking Wiki.md  Building Open Claw Agents for SnoBase Knowledge Base.md  CONVENTIONS.md  Maturing-Inference-Market-and-Investment-Dynamics.md  OpenClaw & AI Agentic Systems — Knowledge Base.md  Persona Intelligence Agent Idea.md  README.md  _index.md  _topics.md
commonplace/: __init__.py  cli.py  config.py  extract.py  prompts.py  propose.py  render.py
commonplace/tests/: test_cli.py  test_config.py  test_extract.py  test_propose.py  test_render.py  test_ui.py
commonplace/ui/: __init__.py  app.py
commonplace/ui/templates/: _library.css  index.html
commonplace_app/: __init__.py  cli.py  extractor.py  ingest.py  markdown.py  schemas.py  service.py
extension/: background.js  content.css  content.js  manifest.json  options.html  options.js
inbox/: README.md
server/: main.py
tests/: test_cli.py  test_extractor.py  test_ingest.py  test_markdown.py  test_service.py
wiki/: 2026-04-13-from-research-loop-productization-to-commonplace-wiki-capture.md  Persona Intelligence Agent Idea.md  agent-week-first-pass-wiki.md  etymology_nerd_thinking_wiki.md  openclaw-kb (1).md  openclaw-kb (2).md
