[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "commonplace"
version = "0.1.0"
description = "A modern commonplace book ingestion CLI for drafting entries into a curated library."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "jinja2",
    "markdown",
    "openai",
    "pydantic",
    "pypdf",
    "python-dotenv",
    "python-multipart",
    "PyYAML",
    "uvicorn",
]

[project.scripts]
commonplace = "commonplace.cli:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["commonplace*"]
exclude = ["commonplace.tests*"]
